# cyberimmune-systems-example-traffic-light-kos

./: .gitignore  2  CMakeLists.txt  Dockerfile  Makefile  README.md  cross-build-sim.sh  cross-build.sh
client/: CMakeLists.txt
client/src/: client.c
control_system/: CMakeLists.txt
control_system/src/: control_system.c
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
exchange/: CMakeLists.txt
exchange/src/: exchange.c
hardware_diagnostic/: CMakeLists.txt
hardware_diagnostic/src/: diag_msg.c  diag_msg.h  hardware_diagnostic.c
http_server/: Dockerfile
http_server/html/: index.html
http_server/script/: pmsrv.pl
lights_gpio/: CMakeLists.txt
lights_gpio/src/: lights_gpio.c  messages.c  messages.h  presentation.c  presentation.h
microjson/: CMakeLists.txt
microjson/src/: mjson.c
mode_checker/: CMakeLists.txt
mode_checker/src/: mode_checker.c  mode_list.h  mode_utils.c  mode_utils.h
resources/: CCode.cdl  CDiagMessage.cdl  CMode.cdl  Client.edl  ControlSystem.edl  Exchange.edl  HardwareDiagnostic.edl  ICode.idl  IDiagMessage.idl  IMode.idl  LightsGPIO.edl  ModeChecker.edl  Ping.cdl  Ping.idl  Server.edl
resources/hdd/etc/: dhcpcd.conf  dhcpcd_dynamic.conf  dhcpcd_static.conf
server/: CMakeLists.txt
server/src/: server.c
